--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 	compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
 	compile group: 'org.apache.commons', name: 'commons-lang3',        version: '3.6'
 	compile group: 'org.reflections',    name: 'reflections',          version: '0.9.11'
+	compile group: 'com.h2database',	 name: 'h2', 				   version: '1.4.199'
 
 	testCompile group: 'junit', name: 'junit', version: '4.12'
 }
